# diseaseAggregator

./: create_infiles.sh
diseaseAggregator/: Bucket.cpp  Bucket.h  BucketList.cpp  BucketList.h  CMakeLists.txt  Commands.cpp  Commands.h  FileManagement.h  Functions.cpp  Functions.h  Hashtable.cpp  Hashtable.h  Heap.cpp  Heap.h  HeapNode.cpp  HeapNode.h  ListNode.cpp  ListNode.h  Record.cpp  Record.h  RecordIDManagement.cpp  RecordIDManagement.h  SignalHandling.cpp  SignalHandling.h  SummaryList.cpp  SummaryList.h  SummaryManagement.cpp  SummaryManagement.h  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h  Worker.cpp  main.cpp  test.cpp
diseaseAggregator/input/China/: 25-06-1995
diseaseAggregator/input/Germany/: 22-12-2019  23-02-2012  25-06-1995
